[package]
name = "earthbucks_lib"
description = "EarthBucks library for data structures and algorithms"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]
repository = "https://github.com/earthbucks/earthbucks"

[dependencies]
secp256k1 = "0.30.0"
rand = "0.8.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5.1"
byteorder = "1.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.14"
regex = "1.10.4"
bs58 = "0.5.1"
bnum = "0.12.0"
