[package]
name = "earthbucks_pow"
description = "EarthBucks Proof-of-Work (PoW) algorithms with big dependencies."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]

[dependencies]
earthbucks_lib = { path = "../earthbucks_lib" }
ndarray = "0.15.6"
tensorflow = "0.21.0"