[package]
name = "earthbucks_pow2"
description = "EarthBucks Proof-of-Work (PoW) Algorithm (2)"
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]
repository = "https://github.com/earthbucks/earthbucks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10.8"
wasm-bindgen = { version = "0.2" }
hex = "0.4.3"

[dev-dependencies]
