[package]
name = "earthbucks_secp256k1"
description = "Elliptic curve secp256k1 for EarthBucks with optional support for WASM."
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]
repository = "https://github.com/earthbucks/earthbucks"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# The 'wasm' feature enables the wasm-bindgen dependency and other wasm-specific code.
wasm = ["wasm-bindgen"]

[dependencies]
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic"] }
# Conditionally include wasm-bindgen only when the 'wasm' feature is enabled
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rfc6979 = "0.4.0"
sha2 = "0.10.8"
hex-literal = "0.4.1"
log = { version = "0.4" }
env_logger = "0.11.5"
secp256k1 = { version = "0.30.0" }
hex = "0.4.3"
earthbucks_blake3 = "0.8.5"
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "ecdsa"] }
