[package]
name = "earthbucks_tauri"
edition = "2021"
version.workspace = true
build = "src/build.rs"

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-build = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
