[package]
name = "ebx_builder"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]

[dependencies]
"ebx_lib" = { path = "../ebx_lib" }
hex = "0.4.3"
actix-web = "4.5.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
anyhow = "1.0"
env_logger = "0.11.3"
log = "0.4.21"
ctrlc = "3.4.4"
signal-hook = "0.3.17"
