[package]
name = "openebx_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]

[dependencies]
secp256k1 = "0.29.0"
rand = "0.8.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5.1"
byteorder = "1.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.14"
num-integer = "0.1"