[package]
name = "openspv_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1 = "0.20.2"
sha2 = "0.9.8"
rand = "0.8.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "0.3.8"
byteorder = "1.4.3"
lazy_static = "1.4.0"
num-bigint = "0.3.2"
num-traits = "0.2.14"