[package]
name = "satored-lib" # replace with your project name
version = "0.1.0" # replace with your project version
edition = "2018" # replace with your Rust edition

[dependencies]
secp256k1 = "0.20.2"
sha2 = "0.9.8"
rand = "0.8.4"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "0.3.8"