[package]
name = "webbuf_aescbc"
description = "WebBuf AES-CBC library"
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com> (https://ryanxcharles.com)"]
repository = "https://github.com/ryanxcharles/webbuf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
aes = "0.8.4"

[dev-dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
