[package]
name = "webbuf_secp256k1"
description = "Rust WASM elliptic curve secp256k1 for digital signatures and Diffie-Hellman key exchange"
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]
repository = "https://github.com/ryanxcharles/webbuf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rfc6979 = "0.4.0"
sha2 = "0.10.8"
hex-literal = "0.4.1"
log = { version = "0.4" }
env_logger = "0.11.5"
secp256k1 = { version = "0.30.0" }
hex = "0.4.3"
webbuf_blake3 = "0.8.5"
k256 = { version = "0.13.4", default-features = false, features = ["arithmetic", "ecdsa"] }
